--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "chart.js": "^4.4.9",
+    "ng2-charts": "^4.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "ud06te01": "file:",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
